Add preferences. 3.0.3 Release

--- a/sources/res/menu/menu.xml
+++ b/sources/res/menu/menu.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/calculatorButton" android:title="@string/calculator" android:icon="@drawable/calculator_icon" android:showAsAction="always|withText"></item>
+    <item android:id="@+id/calculatorButton" 
+        android:title="@string/calculator" 
+        android:icon="@drawable/calculator_icon" 
+        android:showAsAction="always|withText" />
     
-
+    <item android:id="@+id/preferencesButton" 
+        android:title="@string/preferences" 
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:showAsAction="never" />
 </menu>
