--- a/sources/res/layout/clearable_edittext.xml
+++ b/sources/res/layout/clearable_edittext.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/views_margin"
+    android:layout_marginTop="@dimen/views_margin" >
 
     <EditText
         android:id="@+id/editText"
