--- a/sources/res/layout/main.xml
+++ b/sources/res/layout/main.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="30dip"
+        android:layout_marginRight="30dp"
         android:gravity="center_vertical|right" >
 
         <TextView
