--- a/sources/res/layout/number_picker.xml
+++ b/sources/res/layout/number_picker.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_marginBottom="@dimen/views_margin"
+    android:layout_marginTop="@dimen/views_margin"
+    android:orientation="horizontal" >
 
     <ImageButton
         android:id="@+id/numberDownButton"
         style="@style/LeftButton"
-        android:layout_width="40dip"
+        android:layout_width="@dimen/np_button"
         android:layout_height="wrap_content"
         android:src="@android:drawable/arrow_down_float" />
     
@@ -45,7 +46,7 @@
     <ImageButton
         android:id="@+id/numberUpButton"
         style="@style/RightButton"
-        android:layout_width="40dip"
+        android:layout_width="@dimen/np_button"
         android:layout_height="wrap_content"
         android:src="@android:drawable/arrow_up_float" />
 
