--- a/sources/res/values-h320dp/dimens.xml
+++ b/sources/res/values-h320dp/dimens.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="key_height">50dp</dimen>
+    <dimen name="key_height">45dp</dimen>
+    <dimen name="np_button">40dp</dimen>
+    <dimen name="np_button_slim">35dp</dimen>
+    <dimen name="calc_np_width">110dp</dimen>
+    <dimen name="min_edittext_height">54dp</dimen>
+    <dimen name="views_margin">3px</dimen>
 </resources>
