--- a/sources/res/values/style.xml
+++ b/sources/res/values/style.xml
@@ -10,7 +10,7 @@
         <item name="android:paddingBottom">24px</item>
         <item name="android:paddingLeft">24px</item>
         <item name="android:paddingRight">24px</item>-->
-        <item name="android:minHeight">56dp</item>
+        <item name="android:minHeight">@dimen/min_edittext_height</item>
 	</style>
 	<style name="LeftEditText" parent="EditText">
 		<item name="android:textColor">#FF000000</item>
@@ -19,19 +19,19 @@
 	<style name="SolidEditText" parent="">
 		<item name="android:textColor">#FF000000</item>
         <item name="android:background">@drawable/solid_edittext_background</item>
-        <item name="android:minHeight">56dp</item>
+        <item name="android:minHeight">@dimen/min_edittext_height</item>
 	</style>
 	
 	<style name="Button" parent="@android:style/Widget.ImageButton">
 		<item name="android:textColor">#FF000000</item>
         <!-- item name="android:background">@drawable/button_background</item-->
-        <item name="android:minHeight">56dp</item>
+        <item name="android:minHeight">@dimen/min_edittext_height</item>
 	</style>
 	
 	<style name="LeftButton" parent="Button">
 		<item name="android:textColor">#FF000000</item>
         <item name="android:background">@drawable/left_button_background</item>
-        <item name="android:paddingLeft">24px</item>
+        <!-- <item name="android:paddingLeft">24px</item>-->
     </style>
     <style name="RightButton" parent="Button">
 		<item name="android:textColor">#FF000000</item>
