Added solution in calcualtor Added cursor in EditText Release 3.1.1

--- a/sources/res/layout/clearable_edittext.xml
+++ b/sources/res/layout/clearable_edittext.xml
@@ -5,7 +5,7 @@
     android:layout_marginBottom="@dimen/views_margin"
     android:layout_marginTop="@dimen/views_margin" >
 
-    <EditText
+    <com.app.numconv.FixedEditText
         android:id="@+id/editText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
