--- a/app/src/main/res/drawable/ic_menu_calculator_final.xml
+++ b/app/src/main/res/drawable/ic_menu_calculator_final.xml
@@ -2,5 +2,5 @@
 <bitmap
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:src="@drawable/ic_menu_calculator"
-    android:tint="?android:attr/textColor"
+    android:tint="?attr/panelTextColor"
     />
