--- a/app/src/main/res/drawable/ic_menu_solution_final.xml
+++ b/app/src/main/res/drawable/ic_menu_solution_final.xml
@@ -2,4 +2,4 @@
 <bitmap
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:src="@drawable/ic_menu_solution"
-    android:tint="?android:attr/textColor" />
+    android:tint="?attr/panelTextColor" />
