--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -107,24 +107,24 @@
 
     <style name="AppTheme" parent="AppTheme.Blue" />
 
-    <style name="DialogTheme.Black" parent="Theme.AppCompat.Dialog">
-        <item name="android:background">@color/background_black</item>
+    <style name="DialogTheme.Black" parent="android:Theme.Holo.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
-    <style name="DialogTheme.Blue" parent="Theme.AppCompat.Dialog">
-        <item name="android:background">@color/background_blue</item>
+    <style name="DialogTheme.Blue" parent="android:Theme.Holo.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
-    <style name="DialogTheme.Green" parent="Theme.AppCompat.Dialog">
-        <item name="android:background">@color/background_green</item>
+    <style name="DialogTheme.Green" parent="android:Theme.Holo.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
-    <style name="DialogTheme.Red" parent="Theme.AppCompat.Light.Dialog">
-        <item name="android:background">@color/background_red</item>
+    <style name="DialogTheme.Red" parent="android:Theme.Holo.Light.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
-    <style name="DialogTheme.White" parent="Theme.AppCompat.Light.Dialog">
-        <item name="android:background">@color/background_white</item>
+    <style name="DialogTheme.White" parent="android:Theme.Holo.Light.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
  </resources>
